console,oauth: Fix z-index values

--- a/pkg/webui/components/input/input.styl
+++ b/pkg/webui/components/input/input.styl
@@ -68,7 +68,7 @@
   padding: 0 $cs.xs
   display: inline-block
   flex-grow: 2
-  z-index: 10
+  z-index: $zi.slight
   height: 2.3rem
 
   &[type='password']
