--- a/pkg/webui/components/select/select.styl
+++ b/pkg/webui/components/select/select.styl
@@ -19,6 +19,8 @@
   :global(.select__control)
     min-height: 2.2rem
     border-radius: $br.s
+  :global(.select__menu)
+    z-index: $zi.dropdown
   :global(.select__option)
     padding: $cs.xs $cs.s
   :global(.select__option--is-selected)
